hard-gists/1679110/run.log
=== Docker Run Log for 1679110 ===
Started at: Mi 29. Okt 12:22:27 CET 2025

[2025-10-29 12:22:28] START: Running container for 1679110
[2025-10-29 12:22:28] SUCCESS: Container 5bdab8729650cfe27210986eb63faadcaec77e4bf3ab2c72523ad116b4baca82 started for 1679110
=== Container logs for 1679110 ===
  File "/snippet.py", line 18
    print args.directory
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1679110 ===
[2025-10-29 12:22:30] INFO: Container 5bdab8729650cfe27210986eb63faadcaec77e4bf3ab2c72523ad116b4baca82 has stopped
